--- a/ShrinkMeister/Views/MainViewController.xib
+++ b/ShrinkMeister/Views/MainViewController.xib
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="ShrinkMeister" customModuleProvider="target">
             <connections>
-                <outlet property="imageScrollView" destination="SZ2-xc-5AQ" id="bUO-yI-5Ra"/>
+                <outlet property="imageScrollView" destination="SZ2-xc-5AQ" id="Jdj-9F-vOu"/>
                 <outlet property="imageView" destination="JP5-8N-f06" id="rgk-xH-5CX"/>
                 <outlet property="processCollection" destination="CAt-ZF-fx6" id="lGg-1W-nhY"/>
-                <outlet property="view" destination="iN0-l3-epB" id="1ct-xC-eJ6"/>
+                <outlet property="view" destination="iN0-l3-epB" id="kKr-SF-l94"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
