--- a/ShrinkMeister/Views/ProcessViewCustom.xib
+++ b/ShrinkMeister/Views/ProcessViewCustom.xib
@@ -8,11 +8,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProcessViewCustom" customModule="ShrinkMeister" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cyS-Xo-vzZ">
-                    <rect key="frame" x="190" y="285" width="50" height="30"/>
+                    <rect key="frame" x="40" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="GGI-1k-k3a"/>
                     </constraints>
@@ -20,7 +20,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QN1-UD-qUE">
-                    <rect key="frame" x="275" y="285" width="50" height="30"/>
+                    <rect key="frame" x="125" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="oOr-rv-Red"/>
                     </constraints>
@@ -28,7 +28,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0X-2l-cDO">
-                    <rect key="frame" x="353" y="285" width="46" height="30"/>
+                    <rect key="frame" x="203" y="10" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                 </button>
             </subviews>
@@ -42,6 +42,7 @@
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="28" id="Wga-ox-Bwb"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="31" id="kFk-av-29P"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
                     <exclude reference="kFk-av-29P"/>
