--- a/ShrinkMeister/Views/ProcessViewLevel.xib
+++ b/ShrinkMeister/Views/ProcessViewLevel.xib
@@ -8,22 +8,35 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProcessViewLevel" customModule="ShrinkMeister" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dE7-WY-Gos">
-                    <rect key="frame" x="277" y="285" width="46" height="30"/>
-                    <state key="normal" title="Button"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THv-PM-XBl">
+                    <rect key="frame" x="517" y="10" width="55" height="30"/>
+                    <state key="normal" title="Confirm"/>
                 </button>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nlv-Nm-unl">
+                    <rect key="frame" x="210" y="11" width="182" height="29"/>
+                    <segments>
+                        <segment title="First"/>
+                        <segment title="Second"/>
+                        <segment title=""/>
+                    </segments>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="dE7-WY-Gos" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Uzc-5j-QJt"/>
-                <constraint firstItem="dE7-WY-Gos" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Xf8-lK-DmT"/>
+                <constraint firstItem="Nlv-Nm-unl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1Fg-Sf-lES"/>
+                <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
+                <constraint firstItem="Nlv-Nm-unl" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="sVg-qU-YkD"/>
+                <constraint firstItem="THv-PM-XBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="soj-OB-hNR"/>
             </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="levelButton" destination="dE7-WY-Gos" id="3dC-mV-dyn"/>
+                <outlet property="confirmButton" destination="THv-PM-XBl" id="T8w-Ic-pGE"/>
+                <outlet property="levelSelector" destination="Nlv-Nm-unl" id="bwq-aC-vTu"/>
             </connections>
+            <point key="canvasLocation" x="269" y="323"/>
         </view>
     </objects>
 </document>
