--- a/ShrinkMeister/Views/ProcessViewCustom.xib
+++ b/ShrinkMeister/Views/ProcessViewCustom.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,11 +8,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProcessViewCustom" customModule="ShrinkMeister" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="600" height="50"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cyS-Xo-vzZ">
-                    <rect key="frame" x="40" y="10" width="50" height="30"/>
+                    <rect key="frame" x="190" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="GGI-1k-k3a"/>
                     </constraints>
@@ -20,7 +20,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QN1-UD-qUE">
-                    <rect key="frame" x="125" y="10" width="50" height="30"/>
+                    <rect key="frame" x="275" y="10" width="50" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="oOr-rv-Red"/>
                     </constraints>
@@ -28,23 +28,31 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P0X-2l-cDO">
-                    <rect key="frame" x="203" y="10" width="46" height="30"/>
+                    <rect key="frame" x="420" y="10" width="46" height="30"/>
                     <state key="normal" title="Button"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ppv-PK-NXK">
+                    <rect key="frame" x="365" y="10" width="30" height="30"/>
+                    <state key="normal" title="L."/>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
+                <constraint firstItem="ppv-PK-NXK" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="40" id="8jB-OU-VUL"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="35" id="Bee-L6-u9q"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Bel-Nc-UJM"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Exl-4a-yYJ"/>
                 <constraint firstItem="QN1-UD-qUE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K7M-xh-685"/>
+                <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="ppv-PK-NXK" secondAttribute="trailing" constant="25" id="R88-fb-xq3"/>
                 <constraint firstItem="cyS-Xo-vzZ" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="V1u-El-GaA"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="QN1-UD-qUE" secondAttribute="trailing" constant="28" id="Wga-ox-Bwb"/>
+                <constraint firstItem="ppv-PK-NXK" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Ylv-fB-OWy"/>
                 <constraint firstItem="P0X-2l-cDO" firstAttribute="leading" secondItem="cyS-Xo-vzZ" secondAttribute="trailing" constant="31" id="kFk-av-29P"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="Wga-ox-Bwb"/>
                     <exclude reference="kFk-av-29P"/>
                 </mask>
             </variation>
@@ -53,6 +61,7 @@
                 <outlet property="heightField" destination="QN1-UD-qUE" id="8qc-pS-VtV"/>
                 <outlet property="widthField" destination="cyS-Xo-vzZ" id="7HU-jj-YWR"/>
             </connections>
+            <point key="canvasLocation" x="243" y="180"/>
         </view>
     </objects>
 </document>
