--- a/ShrinkMeister/Views/ProcessViewCrop.xib
+++ b/ShrinkMeister/Views/ProcessViewCrop.xib
@@ -12,18 +12,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THv-PM-XBl">
-                    <rect key="frame" x="517" y="10" width="55" height="30"/>
-                    <state key="normal" title="Confirm"/>
+                    <rect key="frame" x="535" y="10" width="37" height="30"/>
+                    <state key="normal" title="Done"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oho-oL-Xuc">
+                    <rect key="frame" x="468" y="10" width="47" height="30"/>
+                    <state key="normal" title="Toggle"/>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
+                <constraint firstItem="oho-oL-Xuc" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="hXB-lg-I0c"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="soj-OB-hNR"/>
+                <constraint firstItem="THv-PM-XBl" firstAttribute="leading" secondItem="oho-oL-Xuc" secondAttribute="trailing" constant="20" id="xSj-5s-acV"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="confirmButton" destination="THv-PM-XBl" id="zlH-h0-ede"/>
+                <outlet property="cropButton" destination="THv-PM-XBl" id="ho1-kH-CLn"/>
+                <outlet property="toggleCropButton" destination="oho-oL-Xuc" id="wVb-Li-ZES"/>
             </connections>
             <point key="canvasLocation" x="269" y="323"/>
         </view>
