--- a/ShrinkMeister/Views/ProcessViewCrop.xib
+++ b/ShrinkMeister/Views/ProcessViewCrop.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -15,24 +15,35 @@
                     <rect key="frame" x="535" y="10" width="37" height="30"/>
                     <state key="normal" title="Done"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oho-oL-Xuc">
-                    <rect key="frame" x="468" y="10" width="47" height="30"/>
-                    <state key="normal" title="Toggle"/>
-                </button>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="nfV-MW-wCM">
+                    <rect key="frame" x="50" y="11" width="243" height="29"/>
+                    <segments>
+                        <segment title="First"/>
+                        <segment title="Second"/>
+                        <segment title=""/>
+                        <segment title=""/>
+                    </segments>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
-                <constraint firstItem="oho-oL-Xuc" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="hXB-lg-I0c"/>
+                <constraint firstItem="nfV-MW-wCM" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Qtj-tD-PZp"/>
+                <constraint firstItem="nfV-MW-wCM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="ef0-8f-lr4"/>
+                <constraint firstItem="nfV-MW-wCM" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="k7y-94-nLR"/>
                 <constraint firstItem="THv-PM-XBl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="soj-OB-hNR"/>
-                <constraint firstItem="THv-PM-XBl" firstAttribute="leading" secondItem="oho-oL-Xuc" secondAttribute="trailing" constant="20" id="xSj-5s-acV"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="Qtj-tD-PZp"/>
+                </mask>
+            </variation>
             <connections>
+                <outlet property="aspectSelector" destination="nfV-MW-wCM" id="xLa-yh-mTI"/>
                 <outlet property="confirmButton" destination="THv-PM-XBl" id="p3b-cI-mYd"/>
-                <outlet property="toggleCropButton" destination="oho-oL-Xuc" id="wVb-Li-ZES"/>
             </connections>
-            <point key="canvasLocation" x="269" y="323"/>
+            <point key="canvasLocation" x="239" y="322"/>
         </view>
     </objects>
 </document>
