--- a/ShrinkMeister/Views/ProcessViewBasic.xib
+++ b/ShrinkMeister/Views/ProcessViewBasic.xib
@@ -16,7 +16,7 @@
                     <state key="normal" title="Confirm"/>
                 </button>
                 <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Nlv-Nm-unl">
-                    <rect key="frame" x="50" y="11" width="182" height="29"/>
+                    <rect key="frame" x="170" y="11" width="182" height="29"/>
                     <segments>
                         <segment title="First"/>
                         <segment title="Second"/>
@@ -24,19 +24,21 @@
                     </segments>
                 </segmentedControl>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ir5-nO-qAB">
-                    <rect key="frame" x="322" y="10" width="30" height="30"/>
+                    <rect key="frame" x="90" y="10" width="30" height="30"/>
                     <state key="normal" title="R."/>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l8F-6y-jKx">
-                    <rect key="frame" x="282" y="10" width="30" height="30"/>
+                    <rect key="frame" x="50" y="10" width="30" height="30"/>
                     <state key="normal" title="L."/>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1Fg-Sf-lES"/>
+                <constraint firstItem="l8F-6y-jKx" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="6BI-oG-gTZ"/>
                 <constraint firstItem="ir5-nO-qAB" firstAttribute="leading" secondItem="l8F-6y-jKx" secondAttribute="trailing" constant="10" id="6GR-4Y-CWe"/>
                 <constraint firstItem="l8F-6y-jKx" firstAttribute="leading" secondItem="Nlv-Nm-unl" secondAttribute="trailing" constant="50" id="9D9-j7-1xg"/>
+                <constraint firstItem="Nlv-Nm-unl" firstAttribute="leading" secondItem="ir5-nO-qAB" secondAttribute="trailing" constant="50" id="HBw-zT-AWt"/>
                 <constraint firstItem="l8F-6y-jKx" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="K8A-pV-pHH"/>
                 <constraint firstAttribute="trailing" secondItem="THv-PM-XBl" secondAttribute="trailing" constant="28" id="N6f-DY-7aP"/>
                 <constraint firstItem="Nlv-Nm-unl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="50" id="Wfc-sC-hpX"/>
@@ -47,6 +49,8 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <variation key="default">
                 <mask key="constraints">
+                    <exclude reference="9D9-j7-1xg"/>
+                    <exclude reference="Wfc-sC-hpX"/>
                     <exclude reference="sVg-qU-YkD"/>
                 </mask>
             </variation>
